# ByteBuffer

./: .gitignore  CMakeLists.txt  LICENSE  byte_buffer.hh  test.cc
include/: accumulator.hh  byte-buffer.hh  exceptions.hh  simple-storage.hh  stack-allocator.hh  test.cc  vector-storage.hh
sources/: accumulator.hh  byte_buffer.hh  test.cc
test/: CMakeLists.txt  accumulator.cc  main.cc  stack-buffer.cc
